Adding match update endpoint
